--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -71,7 +71,7 @@ jobs:
       - name: Upload the site as a GitHub Pages artifact
         uses: actions/upload-pages-artifact@7b1f4a764d45c48632c6b24a0339c27f5614fb0b # v4.0.0
         with:
-          path: docbuild/.lake/doc
+          path: docbuild/.lake/build/doc
   deploy:
     needs: build
     runs-on: ubuntu-latest
