add IsRen and remove autoimpl

--- a/lakefile.toml
+++ b/lakefile.toml
@@ -2,6 +2,8 @@ name = "lean-subst"
 version = "0.1.0"
 defaultTargets = ["lean-subst"]
 
+leanOptions = { autoImplicit = false }
+
 [[lean_lib]]
 name = "LeanSubst"
 
