--- a/lake-manifest.json
+++ b/lake-manifest.json
@@ -1,5 +1,15 @@
 {"version": "1.1.0",
  "packagesDir": ".lake/packages",
- "packages": [],
+ "packages":
+ [{"url": "https://github.com/amarmaduke/lilac",
+   "type": "git",
+   "subDir": null,
+   "scope": "amarmaduke",
+   "rev": "396d7566b10fd112c3cc83395b9195c8b47461cf",
+   "name": "lilac",
+   "manifestFile": "lake-manifest.json",
+   "inputRev": "main",
+   "inherited": false,
+   "configFile": "lakefile.toml"}],
  "name": "«lean-subst»",
  "lakeDir": ".lake"}
